[package]
name = "pug-lexer"
version = "0.1.0"
authors = ["Andrew Breidenbach <breidenbach.aj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
rhai = {version="0.20.0", features=["internals"]}
regex = "1.4.6"
lazy_static = "1.4.0"
